# QryptX

./: .gitignore  QryptX.py  README.md  __init__.py  pyproject.toml  requirements.txt  run_honeypot.py  setup.py
qryptx/: __init__.py
qryptx/config/: config.py
qryptx/core/: honeypot.py
qryptx/dashboard/: dashboard_handler.py
qryptx/database/: db_handler.py
qryptx/services/: ftp_handler.py  http_handler.py  smtp_handler.py  ssh_handler.py
qryptx/utils/: crypto.py  logging.py  templates.py
